# scuttled

./: .gitignore  ARCHITECTURE.md  Cargo.toml  EVENTBUS_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REFACTORING_STATUS.md
data/: users.db
src/: command_handler.rs  command_handlers.rs  connection.rs  error.rs  events.rs  lib.rs  mailbox.rs  protocol.rs  searcher.rs  server.rs  session.rs  session_context.rs  storage.rs  tests.rs  traits.rs  types.rs
src/authenticator/: mod.rs
src/authenticator/impl/: basic.rs  mod.rs
src/handlers/: capability.rs  create.rs  delete.rs  list.rs  login.rs  logout.rs  mod.rs  noop.rs  select.rs
src/implementations/: basic_authenticator.rs  default_index.rs  filesystem_mailstore.rs  inmemory_queue.rs  mod.rs  sqlite_userstore.rs
src/index/: backend.rs  indexer.rs  mod.rs
src/index/impl/: inmemory.rs  mod.rs  tantivy.rs
src/mailboxes/: mod.rs
src/mailboxes/impl/: memory.rs  mod.rs
src/mailstore/: format.rs  mod.rs
src/mailstore/impl/: filesystem.rs  mod.rs
src/mailstore/watcher/: filesystem.rs  maildir.rs  mod.rs
src/queue/: mod.rs
src/queue/impl/: channel.rs  mod.rs
src/storage/: filesystem_store.rs  store_mail.rs
src/userstore/: mod.rs
src/userstore/impl/: mod.rs  sqlite.rs
tests/: integration_tests.rs  test_fetch.rs  test_list.rs  test_login.rs  test_select.rs  tls_tests.rs
tls/: cert.pem  key.pem
