[package]
name = "scuttled"
version = "0.1.0"
edition = "2021"
authors = ["Scuttled Contributors"]
description = "An async IMAP server implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elliottpope/scuttled"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tantivy = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
bcrypt = "0.15"
tokio-native-tls = "0.3"
native-tls = "0.2"
parking_lot = "0.12"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
notify = { version = "6.1", default-features = false, features = [
  "macos_fsevent",
] }
mailparse = "0.15"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
async-imap = { version = "0.11.1", features = [
  "runtime-tokio",
], default-features = false }
tokio-native-tls = "0.3"
rcgen = "0.12"
pem = "3.0"

[[bin]]
name = "scuttled"
path = "src/bin/main.rs"

[lib]
name = "scuttled"
path = "src/lib.rs"
